EPS TA award 2020. Rearrange outreach.

--- a/Edwards_CV.tex
+++ b/Edwards_CV.tex
@@ -163,6 +163,14 @@ Candidacy Fall 2018 \\
 \section{\centerline{OUTREACH \& PUBLIC SERVICE}}
 
 \vspace{4pt} % Gap between title and text
+{\bf Santa Cruz Museum of Natural History} \hfill 2018 – Present\\
+\emph{Volunteer Scientist}
+\begin{itemize} \itemsep -2pt % Reduce space between items
+\item Create educational content and host geoscience educational activities at monthly museum events.
+\item During covid-19 pandemic shelter-in-place orders, prepared and performed in weekly education video streams covering geoscience topics. These \emph{Rockin' Pop-Up} videos are available on \href{https://www.facebook.com/SantaCruzMuseumOfNaturalHistory/live}{SCMNH's Facebook}.
+\end{itemize}
+\vspace{-6pt}
+
 {\bf Geoscientists Encouraging Openness and Diversity in the Earth Sciences} \hfill 2019 – 2020\\
 {\bf (GEODES)} \hspace{3pt} \emph{Student Leader}
 \begin{itemize} \itemsep -2pt % Reduce space between items
@@ -176,14 +184,6 @@ Candidacy Fall 2018 \\
 \begin{itemize} \itemsep -2pt % Reduce space between items
 \item Prepare educational content and host video calls with elementary classrooms.
 \item Teach geoscience concepts and share stories about experiences as a scientist.
-\end{itemize}
-\vspace{-6pt}
-
-{\bf Santa Cruz Museum of Natural History} \hfill 2018 – Present\\
-\emph{Volunteer Scientist}
-\begin{itemize} \itemsep -2pt % Reduce space between items
-\item Create educational content and host geoscience educational activities at monthly museum events.
-\item During covid-19 pandemic shelter-in-place orders, prepared and performed in weekly education video streams covering geoscience topics. These \emph{Rockin' Pop-Up} videos are available on \href{https://www.facebook.com/SantaCruzMuseumOfNaturalHistory/live}{SCMNH's Facebook}.
 \end{itemize}
 \vspace{-6pt}
 
@@ -207,6 +207,7 @@ Candidacy Fall 2018 \\
 
 \begin{spacing}{1.3}
 ARCS Foundation Scholar Award (Fellowship) \hfill 2020 – 2021\\
+UCSC Earth \& Planetary Sciences Outstanding TA Award (Honorable Mention) \hfill 2020\\
 Aaron and Elizabeth Waters Award  \hfill 2019
 
 	\begingroup\par \vspace{-12pt} \leftskip12pt\rightskip5cm \begin{spacing}{1}
