Mentored undergrads, reviewing, reorganize end, edits

--- a/Edwards_CV.tex
+++ b/Edwards_CV.tex
@@ -112,7 +112,7 @@ Candidacy Fall 2018 \\
 \vspace{4pt} % Gap between title and text
 
 \begin{etaremune} [topsep=12pt, itemsep=4pt, itemindent= -12pt]
-  \item T. Blackburn, G.H. Edwards, S. Tulaczyk, M. Scudder, G. Piccione, B. Hallet, J.C. Zachos, B. Cheney, N. McLean, J.T. Babbe. \emph{In press}. Ice retreat in Wilkes Basin of East Antarctica during a warm interglacial $^\circ$C warming. \emph{Nature}.
+  \item T. Blackburn, G.H. Edwards, S. Tulaczyk, M. Scudder, G. Piccione, B. Hallet, J.C. Zachos, B. Cheney, N. McLean, J.T. Babbe. \emph{In press}. Ice retreat in Wilkes Basin of East Antarctica during a warm interglacial. \emph{Nature}.
   \item G.H. Edwards, T. Blackburn. 2020. Accretion of a large LL parent planetesimal from a recently formed chondrule population. \emph{Science Advances} (6), eaay8641. \href{https://advances.sciencemag.org/content/6/16/eaay8641}{doi: 10.1126/sciadv.aay8641}
   \item G.H. Edwards, T. Blackburn. 2018. Detecting the extent of ca. 1.1 Ga Midcontinent Rift plume heating using U-Pb thermochronology of the lower crust. \emph{Geology} (46), 911–914. \href{https://doi.org/10.1130/G45150.1}{doi: 10.1130/G45150.1}
   \item G.H. Edwards. 2014. Geochemical and stratigraphic analysis of the Linnévatnet sediment record: a study of Late Holocene cirque glacier activity in Spitsbergen, Svalbard. [\emph{Honor’s Thesis}] Bowdoin College: Brunswick, ME, U.S.A. 73 p. \href{https://digitalcommons.bowdoin.edu/honorsprojects/12/}{[Undergraduate Research Commons]}
@@ -247,33 +247,54 @@ Freedman Summer Research Fellowship in Coastal/Environmental Studies \hfill 2012
 %	ADDITIONAL  SERVICES, EXPERIENCES SECTION
 %----------------------------------------------------------------------------------------
 
-\section{\centerline{ADDITIONAL SERVICES, EXPERIENCES}}
+\section{\centerline{ACADEMIC SERVICE, EXPERIENCE}}
 
 \vspace{4pt} % Gap between title and text
 
-{\bf American Geophysical Union Fall Meeting} \hfill 2017\\
-\emph{Session Co-Chair/Co-Convener}: Applications of Thermochronology to Understand Crustal Systems
+{\bf Reviewer for}: \emph{Geochronology}
 \vspace{-6pt}
 
-{\bf Department of Earth \& Planetary Sciences, UCSC} \hfill  Spring 2019\\
+\textbf{Mentored Undergraduate Theses}
+\begin{itemize} \itemsep -2pt % Reduce space between items
+\item Michael Scudder, 2020
+\item Cosmo Varah-Sikes, planned 2021
+\end{itemize}
+\vspace{-6pt}
+
+\textbf{Conference Sessions}
+\begin{itemize} \itemsep -2pt % Reduce space between items\hfill 2017\\
+\item 2017 AGU Fall Meeting $|$ Co-Chair/Co-Convener: \emph{Applications of Thermochronology to Understand Crustal Systems}
+\end{itemize}
+\vspace{-6pt}
+
+\textbf{Department of Earth \& Planetary Sciences, UCSC} \hfill  Spring 2019\\
 \emph{Whole Earth Seminar Organizer}
 \begin{itemize} \itemsep -2pt % Reduce space between items
 \item One of two graduate student organizers that coordinated a departmental seminar series.
 \item Contacted and scheduled speakers from diverse disciplines with in Earth and planetary sciences.
 \end{itemize}
-\vspace{-8pt}
-
-{\bf U.S. Forest Service} \hspace{15pt} Winthrop, WA, U.S.A. \hfill  2015 \\
-Forestry Aid (\emph{Wildland Firefighter Type 2}, GS-2)
+\vspace{-6pt}
 
 \begin{hangparas}{.25in}{1}
 \textbf{Society Affiliations:} Geochemical Society, Geological Society of America, Meteoritical Society, American Geophysical Union.
-\vspace{-6pt}
+\end{hangparas}
+\vspace{6pt}
 
-\textbf{Analytical Experience:} \emph{Expert:} TIMS. \emph{Proficient:} MC-ICP-MS, ICP-MS, SEM EDS. \emph{Limited:} ICP-OES, XRF, XRD.
-\vspace{-6pt}
+\centerline{\rule{2.5in}{0.5pt}}
 
-\textbf{Non-academic Interests}: Rock climbing, cross-country skiing, birdwatching, classical literature.
+\textbf{Analytical Experience:}
+\begin{itemize} \itemsep -2pt % Reduce space between items
+\item[] \emph{Expert:} TIMS
+\item[] \emph{Proficient:} MC-ICP-MS, ICP-MS, SEM EDS
+\item[] \emph{Limited:} ICP-OES, XRF, XRD
+\end{itemize}
+
+\begin{hangparas}{.25in}{1}
+\textbf{Additional Work Experience}:
+Server and Bartender (Trio Restaurant, Fish Creek, WI – 2014),
+Wildland Firefighter (USFS handcrew, Winthrop, WA – 2015).
+
+\textbf{Non-Academic Interests}: Rock climbing, cross-country skiing, birdwatching, classical literature.
 \end{hangparas}
 %----------------------------------------------------------------------------------------
 
