Update rockin pop-up link, Nature article

--- a/Edwards_CV.tex
+++ b/Edwards_CV.tex
@@ -112,7 +112,7 @@ Candidacy Fall 2018 \\
 \vspace{4pt} % Gap between title and text
 
 \begin{etaremune} [topsep=12pt, itemsep=4pt, itemindent= -12pt]
-  \item T. Blackburn, G.H. Edwards, S. Tulaczyk, M. Scudder, G. Piccione, B. Hallet, J.C. Zachos, B. Cheney, N. McLean, J.T. Babbe. \emph{In press}. Ice retreat in Wilkes Basin of East Antarctica during a warm interglacial. \emph{Nature}.
+  \item T. Blackburn, G.H. Edwards, S. Tulaczyk, M. Scudder, G. Piccione, B. Hallet, J.C. Zachos, B. Cheney, N. McLean, J.T. Babbe. \emph{In press}. Ice retreat in Wilkes Basin of East Antarctica during a warm interglacial. \emph{Nature} (583), 554-559. \href{https://doi.org/10.1038/s41586-020-2484-5}{doi: 10.1038/s41586-020-2484-5}. Press in \href{https://www.nationalgeographic.com/science/2020/07/east-antarctic-ice-sheet-more-vulnerable-to-melting-than-thought/}{National Geographic}.
   \item G.H. Edwards, T. Blackburn. 2020. Accretion of a large LL parent planetesimal from a recently formed chondrule population. \emph{Science Advances} (6), eaay8641. \href{https://advances.sciencemag.org/content/6/16/eaay8641}{doi: 10.1126/sciadv.aay8641}
   \item G.H. Edwards, T. Blackburn. 2018. Detecting the extent of ca. 1.1 Ga Midcontinent Rift plume heating using U-Pb thermochronology of the lower crust. \emph{Geology} (46), 911–914. \href{https://doi.org/10.1130/G45150.1}{doi: 10.1130/G45150.1}
   \item G.H. Edwards. 2014. Geochemical and stratigraphic analysis of the Linnévatnet sediment record: a study of Late Holocene cirque glacier activity in Spitsbergen, Svalbard. [\emph{Honor’s Thesis}] Bowdoin College: Brunswick, ME, U.S.A. 73 p. \href{https://digitalcommons.bowdoin.edu/honorsprojects/12/}{[Undergraduate Research Commons]}
@@ -167,7 +167,7 @@ Candidacy Fall 2018 \\
 \emph{Volunteer Scientist}
 \begin{itemize} \itemsep -2pt % Reduce space between items
 \item Create educational content and host geoscience educational activities at monthly museum events.
-\item During covid-19 pandemic shelter-in-place orders, prepared and performed in weekly education video streams covering geoscience topics. These \emph{Rockin' Pop-Up} videos are available on \href{https://www.facebook.com/SantaCruzMuseumOfNaturalHistory/live}{SCMNH's Facebook}.
+\item During covid-19 pandemic shelter-in-place orders, prepared and performed in weekly educational video streams covering geoscience topics. Archived \emph{Rockin' Pop-Up} videos are available \href{https://www.santacruzmuseum.org/category/rockin-pop-up/}{here}.
 \end{itemize}
 \vspace{-6pt}
 
@@ -294,7 +294,7 @@ Freedman Summer Research Fellowship in Coastal/Environmental Studies \hfill 2012
 Server and Bartender (Trio Restaurant, Fish Creek, WI – 2014),
 Wildland Firefighter (USFS handcrew, Winthrop, WA – 2015).
 
-\textbf{Non-Academic Interests}: Rock climbing, cross-country skiing, birdwatching, classical literature.
+\textbf{Non-Academic Interests}: Rock climbing, cross-country skiing, birdwatching, classical history and literature.
 \end{hangparas}
 %----------------------------------------------------------------------------------------
 
