Fix typo in abst. Add that bread.

--- a/Edwards_CV.tex
+++ b/Edwards_CV.tex
@@ -235,7 +235,7 @@ Freedman Summer Research Fellowship in Coastal/Environmental Studies \hfill 2012
 \begin{etaremune} [topsep=12pt, itemsep=4pt, itemindent= -12pt]
   \item G.H. Edwards, T. Blackburn, S. Tulaczyk, G.G. Piccione. 2019. [Poster]: U-series isotopics of silts from Taylor Valley, Antarctica: Applying comminution dating methods on polar desert tills and implications for the timeframe of valley incision. \emph{American Geophysical Union Fall Meeting}, San Francisco, CA, U.S.A.
   \item  G.H. Edwards, T. Blackburn, S. Tulaczyk, G.G. Piccione. 2019. [Poster]: U-Series isotopics constrain timescale of bedrock comminution and glacial incision in Taylor Valley, Antarctica. \emph{Goldschmidt Annual Meeting}, Barcelona, ES.
-  \item  G.H. Edwards, T. Blackburn, C.M.O’M. Alexander. 2017. [Talk]: Accretion and disruption histories of the ordinary chondrite parent bodies. \emph{Meteoritical Society Annual Meeting}, Santa Fe, NM, U.S.A.
+  \item  G.H. Edwards, T. Blackburn, C.M.O’D. Alexander. 2017. [Talk]: Accretion and disruption histories of the ordinary chondrite parent bodies. \emph{Meteoritical Society Annual Meeting}, Santa Fe, NM, U.S.A.
   \item G.H. Edwards, T. Blackburn, K.V. Smit. 2017. [Poster]: Timescales of crustal cooling of the Superior Craton near Attawapiskat, Ontario, Canada, and implications for extent of Keweenawan plume heating. \emph{American Geophysical Union Fall Meeting}, New Orleans, LA, U.S.A.
   \item G.H. Edwards. 2014. [Poster]: Geochemical and stratigraphic analysis of the Linnévatnet sediment record: a provenance study of Late Holocene cirque glacier activity in Linnédalen, Spitsbergen, Svalbard. \emph{44th International Arctic Workshop}, Boulder, CO, U.S.A.
 \end{etaremune}
@@ -294,7 +294,7 @@ Freedman Summer Research Fellowship in Coastal/Environmental Studies \hfill 2012
 Server and Bartender (Trio Restaurant, Fish Creek, WI – 2014),
 Wildland Firefighter (USFS handcrew, Winthrop, WA – 2015).
 
-\textbf{Non-Academic Interests}: Rock climbing, cross-country skiing, birdwatching, classical history and literature.
+\textbf{Non-Academic Interests}: Rock climbing, cross-country skiing, birdwatching, naturally leavened bread, classical history and literature.
 \end{hangparas}
 %----------------------------------------------------------------------------------------
 
