LunGradCon, add undergrads. touch up

--- a/Edwards_CV.tex
+++ b/Edwards_CV.tex
@@ -179,7 +179,7 @@ Candidacy Fall 2018 \\
 \end{itemize}
 \vspace{-6pt}
 
-{\bf Skype a Scientist} \hfill 2019\\
+{\bf Skype a Scientist} \hfill 2019 – 2020\\
 \emph{Volunteer Scientist}
 \begin{itemize} \itemsep -2pt % Reduce space between items
 \item Prepare educational content and host video calls with elementary classrooms.
@@ -235,6 +235,7 @@ Freedman Summer Research Fellowship in Coastal/Environmental Studies \hfill 2012
 \begin{etaremune} [topsep=12pt, itemsep=4pt, itemindent= -12pt]
   \item G.H. Edwards, T. Blackburn, S. Tulaczyk, G.G. Piccione. 2019. [Poster]: U-series isotopics of silts from Taylor Valley, Antarctica: Applying comminution dating methods on polar desert tills and implications for the timeframe of valley incision. \emph{American Geophysical Union Fall Meeting}, San Francisco, CA, U.S.A.
   \item  G.H. Edwards, T. Blackburn, S. Tulaczyk, G.G. Piccione. 2019. [Poster]: U-Series isotopics constrain timescale of bedrock comminution and glacial incision in Taylor Valley, Antarctica. \emph{Goldschmidt Annual Meeting}, Barcelona, ES.
+	\item  G.H. Edwards, T. Blackburn, G.G. Piccione. 2018. [Talk]: Cooling and disruption of the LL chondrite parent body. \emph{Lunar and Small Bodies Graduate Forum (LunGradCon)}, Mountain View, CA, U.S.A.
   \item  G.H. Edwards, T. Blackburn, C.M.O’D. Alexander. 2017. [Talk]: Accretion and disruption histories of the ordinary chondrite parent bodies. \emph{Meteoritical Society Annual Meeting}, Santa Fe, NM, U.S.A.
   \item G.H. Edwards, T. Blackburn, K.V. Smit. 2017. [Poster]: Timescales of crustal cooling of the Superior Craton near Attawapiskat, Ontario, Canada, and implications for extent of Keweenawan plume heating. \emph{American Geophysical Union Fall Meeting}, New Orleans, LA, U.S.A.
   \item G.H. Edwards. 2014. [Poster]: Geochemical and stratigraphic analysis of the Linnévatnet sediment record: a provenance study of Late Holocene cirque glacier activity in Linnédalen, Spitsbergen, Svalbard. \emph{44th International Arctic Workshop}, Boulder, CO, U.S.A.
@@ -254,10 +255,13 @@ Freedman Summer Research Fellowship in Coastal/Environmental Studies \hfill 2012
 {\bf Reviewer for}: \emph{Geochronology}
 \vspace{-6pt}
 
-\textbf{Mentored Undergraduate Theses}
+\textbf{Mentored Undergraduates}
 \begin{itemize} \itemsep -2pt % Reduce space between items
-\item Michael Scudder, 2020
-\item Cosmo Varah-Sikes, planned 2021
+\item Paul Colosi (2017-2018)
+\item Alexander Levinson (2018)
+\item Michael Scudder (2018-2020), thesis (2020)
+\item Linh Phan (2020)
+\item Cosmo Varah-Sikes, (2019-2020), planned thesis (2021)
 \end{itemize}
 \vspace{-6pt}
 
@@ -267,8 +271,8 @@ Freedman Summer Research Fellowship in Coastal/Environmental Studies \hfill 2012
 \end{itemize}
 \vspace{-6pt}
 
-\textbf{Department of Earth \& Planetary Sciences, UCSC} \hfill  Spring 2019\\
-\emph{Whole Earth Seminar Organizer}
+\textbf{Seminars and Talks}\\
+\emph{Whole Earth Seminar Organizer}, Department of Earth \& Planetary Sciences, UCSC \hfill  Spring 2019
 \begin{itemize} \itemsep -2pt % Reduce space between items
 \item One of two graduate student organizers that coordinated a departmental seminar series.
 \item Contacted and scheduled speakers from diverse disciplines with in Earth and planetary sciences.
@@ -294,7 +298,7 @@ Freedman Summer Research Fellowship in Coastal/Environmental Studies \hfill 2012
 Server and Bartender (Trio Restaurant, Fish Creek, WI – 2014),
 Wildland Firefighter (USFS handcrew, Winthrop, WA – 2015).
 
-\textbf{Non-Academic Interests}: Rock climbing, cross-country skiing, birdwatching, naturally leavened bread, classical history and literature.
+\textbf{Non-Academic Interests}: Rock climbing, cross-country skiing, birdwatching, breads, classical history and literature.
 \end{hangparas}
 %----------------------------------------------------------------------------------------
 
