--- a/Edwards_CV.tex
+++ b/Edwards_CV.tex
@@ -298,7 +298,7 @@ Freedman Summer Research Fellowship in Coastal/Environmental Studies \hfill 2012
 Server and Bartender (Trio Restaurant, Fish Creek, WI – 2014),
 Wildland Firefighter (USFS handcrew, Winthrop, WA – 2015).
 
-\textbf{Non-Academic Interests}: Rock climbing, cross-country skiing, birdwatching, breads, classical history and literature.
+\textbf{Non-Academic Interests}: Rock climbing, cross-country skiing, birdwatching, bread, classical history and literature.
 \end{hangparas}
 %----------------------------------------------------------------------------------------
 
