Add museum of rockies.

--- a/Edwards_CV.tex
+++ b/Edwards_CV.tex
@@ -73,10 +73,9 @@
 \section{STATEMENT}
 \vspace{8pt} % Gap between title and text
 
-I scientifically identify as geochronologist: my primary research interest is to resolve and refine timescales of Earth and solar system processes via radiometric records. My doctoral research has focused on the application of the uranium decay systems to uncover the tempos of high-temperature processes in deep time andsubglacial processes in the Quaternary. In my future work, I intend to...\
+I am a geochemist and geochronologist: my primary research interest is to resolve and refine timescales of Earth and solar system processes via radiometric records. My doctoral research has focused on the application of the uranium decay systems to uncover the tempos of high-temperature processes in deep time and subglacial processes in the Quaternary. In my future work, I am excited to hone my statistical techniques to apply to database studies of meteorite chemistries.\
 
-In addition to these research foci, I am dually committed to the inclusion and retention of individuals and groups of diverse identities and backgrounds. dissemination of scientific information within and beyond the insular spheres of academia the active . Education at multiple levels
-As a member of the Keck Isotope Laboratory, I enjoyed the opportunity to instruct and supervise researchers in chemical and analytical techniques in an isotope geochemistry lab.
+In addition to my research interests, I am dually committed to the inclusion, support, and retention of individuals and groups of diverse identities and backgrounds. \
 
 %----------------------------------------------------------------------------------------
 \vspace{0.2cm} % Some whitespace between sections
@@ -193,6 +192,13 @@ Candidacy Fall 2018 \\
 \item Developed outreach programming and exhibition content.
 \item Supplemented undergraduate courses with lectures drawing on museum collections.
 \item Mentored and trained undergraduate student interns and employees.
+\end{itemize}
+
+{\bf Museum of the Rockies} \hspace{15pt} Bozeman, MT, U.S.A. \hfill 2015\\
+\emph{Security Volunteer}
+\begin{itemize} \itemsep -2pt % Reduce space between items
+\item Enforced museum rules as an introductory volunteer (docents required multi-year training).
+\item I dedicated the bulk of my time to answering visitors' questions and facilitating interpretive discussions about natural history exhibits.
 \end{itemize}
 
 %----------------------------------------------------------------------------------------
